--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "clsx": "^2.0.0",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-twitter-embed": "^4.0.4"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.3.2",
